# convoAI

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  convoAI.c  idf_component.yml
main/font/: fang_song.c
main/net/: http_client.c  http_server.c  http_server.h  wifi.c  wifi.h
main/peripheral/: audio.c  audio.h  common.c  common.h  pin.h  screen.c  screen.h  tf.c  tf.h
main/ui/: home_page.c  home_page.h
